Fix logo vertical alignment

--- a/style.css
+++ b/style.css
@@ -25,9 +25,7 @@ body {
     height: 200px;
     -webkit-background-size: cover;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("img/header-bg.png");
-    background-color: #000000;
+    background: #000000 url("img/header-bg.png") no-repeat;
     margin: 0;
     z-index: 1000;
     padding-top: 30px;
@@ -37,6 +35,12 @@ body {
 img.pm-logo {
     height: auto;
     max-width: 100%;
+    max-height: 100%;
+}
+
+.header-logo-wrapper{
+    height: 100%;
+    vertical-align: middle;
 }
 
 .navbar-static-top {
@@ -54,13 +58,14 @@ img.pm-logo {
     overflow: hidden;
     height: 100%;
     background: #000000 url("img/the-maze-bg.png") no-repeat fixed center 250px;
-    background-size: 40%;
+    background-size: cover;
 }
 
 #page-content > .container {
     background-color: #333333;
     opacity: 0.8;
     margin-top: 250px;
+    height: calc(100% - 250px);
 }
 
 .navbar-default {
@@ -126,11 +131,13 @@ header > div.featured-image {
 
     #page-content > .container {
         margin-top: 160px;
+        height: calc(100% - 160px);
     }
 
     #page-content {
         background-position-y: 195px;
-        background-size: contain;
+        background-size: cover;
+        height: calc(100% - 0px);
     }
 }
 
